specify visible scrollbar to bottom box, set interactive title to none display on mobile, fix vertical centering on overlay

--- a/interactivesBackend/photoMap/static/photoMap/css/custom.css
+++ b/interactivesBackend/photoMap/static/photoMap/css/custom.css
@@ -38,6 +38,17 @@ html, body {
 	margin-right: -999em;
 }
 
+.bottom-box-inner::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+}
+
+.bottom-box-inner::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0,0,0,.5);
+    box-shadow: 0 0 1px rgba(255,255,255,.5);
+}
+
 .nameplate {
 	width: 340px;
 	height: 42px;
@@ -156,16 +167,6 @@ html, body {
 	cursor: default;
 }
 
-::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 7px;
-}
-::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0,0,0,.5);
-    box-shadow: 0 0 1px rgba(255,255,255,.5);
-}
-
 #overlay,
 #overlay-box,
 #attribution-overlay,
@@ -195,6 +196,7 @@ html, body {
 	background-size: cover;
 	height: 100%;
 	overflow-y: scroll;
+	padding: 50px;
 }
 
 #overlay-text {
@@ -203,12 +205,7 @@ html, body {
 	color: white;
 	font-family: 'Roboto', sans-serif;
 	position: relative;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-	transform: translateY(-50%);
+	vertical-align: middle;
 	text-align: center;
 	padding: 20px;
 	padding-left: 170px;
@@ -266,4 +263,38 @@ html, body {
 .leaflet-bottom,
 .leaflet-control {
 	z-index: 2; 
+}
+
+
+@media only screen and (max-device-width: 480px) {
+	#interactive-title {
+		display: none;
+	}
+
+	.nameplate {
+		width: 90%;
+	}
+
+	#overlay,
+	#attribution-overlay {
+		height: 88%;
+		top: 3%;
+		left: 3%;
+		right: 3%;
+		bottom: 3%;
+	}
+
+	#overlay-text {
+		padding: 2%;
+		padding-top: 50%;
+		padding-left: 3%;
+		padding-right: 3%; 
+		border-radius: 5px;
+		font-size: 1rem;
+	}
+
+	#attribution-box {
+		padding: 10px;
+	}
+
 }
